# protein-visualizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
scripts/: regenerate_glad.ps1
shaders/: cylinder_instanced.vert  fragment.glsl  sphere_instanced.frag  sphere_instanced.vert  vertex.glsl
src/: main.cpp
src/core/: Application.cpp  Application.h  Screenshot.cpp  Screenshot.h  Window.cpp  Window.h
src/model/: Atom.h  Protein.cpp  Protein.h  SecondaryStructure.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/utils/: BondDistanceConstants.h  MmCifParser.cpp  MmCifParser.h  PDBParser.cpp  PDBParser.h  Picking.cpp  Picking.h  StructureLoader.cpp  StructureLoader.h
tests/: pdb_parser_smoke.cpp
